--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             text-align: center;
             font-weight: 200;
         }
-		h3{ color:var(--color_rosado)}
+		h3{ color:var(--color-primary)}
 		
 		/* Header */
         header {
@@ -330,7 +330,7 @@
             top: var(--spacing-sm);
             right: var(--spacing-sm);
             background: var(--color-primary);
-            color: var(--color-secondary);
+            color: white;
             padding: 6px 12px;
             border-radius: 20px;
             font-size: 0.75rem;
@@ -826,7 +826,7 @@
     </a>
 
     <footer>
-        <p>&copy; 2025 Alternate Glass. 👽 Todos los derechos reservados.</p>
+        <p>&copy; 2025 Alternate Glass. 👽 <br> Todos los derechos reservados.</p>
     </footer>
 	
 	
