--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             --color-bg: #c6d2de69;
 			--verde_whatsapp:#25D366;
 			--verde_whatsapp_transparent:#25d36675;
-			--color_rosado:rgb(255, 155, 255);
+			--color_rosado:rgb(39 24 39);
 			--color-overlay: rgba(0, 0, 0, 0.5);
 			--color-overlay2: rgb(241 231 243 / 50%);
             --spacing-xs: 0.5rem;
@@ -766,7 +766,7 @@
     </div>
 	
     <div class="slider-wrapper">
-	<h2> Colección actual disponible</h2>
+	<h2> <strong>Colección actual disponible</strong></h2>
 	<h3> Shop the Look</h3>
         <div class="slider-container">
             <!-- Scroll Indicators -->
@@ -810,7 +810,7 @@
     </div>
 	<main>
 	 <section id="contacto" class="contacto">
-		<h2 class="section-badge">Encontrá tu próximo par favorito</h2> 
+		<h2 class="section-badge"><strong>Encontrá tu próximo par favorito<strong></h2> 
             <h3>Contactanos  y que fluya</h3>
 						<div class="contact-details">
                         <p><strong>📞 </strong><a href="tel:094872605">094 872 605</a></p>
