--- a/index.html
+++ b/index.html
@@ -172,15 +172,19 @@
             display: block;
         }
 
-        .mobile-menu {
-            position: fixed;
-            top: -100%;
-            width: 70%;
-            height: 30vh;
-            background-color: var(--color-text-light);
-            padding: 5rem 2rem 2rem;
-            transition: var(--transition);
-            box-shadow: -2px 0 10px var(--color-overlay);
+       .mobile-menu {
+			display: flex;
+			position: fixed;
+			/* letter-spacing: 5px; */
+			top: -100%;
+			width: 100%;
+			height: 40vh;
+			background-color: var(--color-text-light);
+			padding: 5rem 2rem 2rem;
+			transition: var(--transition);
+			box-shadow: -2px 0 10px var(--color-overlay);
+			flex-direction: column;
+			align-items: center;
         }
 
         .mobile-menu.active {
