--- a/index.html
+++ b/index.html
@@ -949,7 +949,7 @@
                 price: "$1300",
                 badge: "Offer",
                 image:"imgs/lentes estenopeicos2.jpeg",
-                imageAlt:"lentes estenopeicos1.jpeg", 
+                imageAlt:"imgs/lentes estenopeicos1.jpeg", 
                 whatsappMessage: "Hola! Me interesa las gafas estenopeicas "
             },
             {
