--- a/index.html
+++ b/index.html
@@ -562,8 +562,9 @@
             transform: translateY(-50%);
             width: 40px;
             height: 40px;
-            background: var(--color-secondary);
+            background: var(--color-border);
             border-radius: 50%;
+			border:1px solid var(--color-border);
             display: flex;
             align-items: center;
             justify-content: center;
@@ -582,7 +583,8 @@
 
         .scroll-indicator:hover {
             background: var(--color-primary);
-            color: var(--color-secondary);
+            color: var(--verde_whatsapp);
+			border-color:(--verde_whatsapp);
         }
 
         .scroll-indicator.left {
