--- a/KikiriyaDevOps.html
+++ b/KikiriyaDevOps.html
@@ -11,7 +11,7 @@
     <meta name="geo.region" content="UY-MO">
     <meta name="geo.placename" content="Montevideo">
     <meta name="geo.position" content="-34.905034;-56.191170">
-	<link rel="shortcut icon" href="https://img.icons8.com/?size=100&id=cbBwGOQecGkx&format=png&color=000000" type="image/jpg">
+	<link rel="shortcut icon" href="imgs/logoKiki.png" type="image/jpg">
     
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Kikiriya DevOps | Desarrollo de Software | Accesibilidad Usabilidad | uy">
@@ -452,7 +452,7 @@
 	<section class="hero" aria-labelledby="hero-title">
         <div class="brand">
 			  <div class="brand_logo">
-				  <div class="logo"><img src="https://img.icons8.com/?size=100&id=cbBwGOQecGkx&format=png&color=000000"/></div>
+				  <div class="logo"><img src="imgs/logoKiki.png"/></div>
 				  <div class="brand_title"><h1><strong >Kikiriya DevOps</strong></h1> <div><i>software development</i></div></div>
 				  
 			  </div>		  
