--- a/KikiriyaDevOps.html
+++ b/KikiriyaDevOps.html
@@ -155,7 +155,7 @@
 	.brand_logo{    
 		display: flex;
 		gap: 1rem;
-		align-items: center;
+		align-items: flex-start;
 	    padding-left: 20px;
 	}
 	
@@ -179,7 +179,8 @@
 		background-size: cover;
 		background-attachment: fixed;
 		background-position: bottom;
-		width: 100%;
+		width: 60px;
+    	height: 40px;
 	}
 	
 	.brand_title{display: flex;
@@ -407,6 +408,7 @@
 		.contact_wrap .contact_my {font-size: 1.1em;letter-spacing:.2rem;}
 		.contact_wrap .contact_my span{font-size:1.2em;}
 		.garantia{bottom:0px;right:0px;letter-spacing:.4rem;padding:.3rem;}
+		.logo img{ width: 80px;    	height: 80px;	}
 		
 	}
     @media(min-width:900px){
